--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@
 .Textbox {
   margin: 10px;
   padding: 10px;
+  background-color: yellow;
   /* min-height: 10vh; */
   /* display: flex;
   flex-direction: column;
@@ -47,6 +48,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white; */
+}
+
+.MainDisplay {
+  width: 50%;
+  height: 100px;
+  margin: 10px;
+  padding: 10px;
+  box-shadow: 2px 2px 10px #555 inset;
+  background-color: rgb(196, 238, 134);
+  color:black;
+  text-align: left;
 }
 
 .Login {
